2005-06-22  Larry Jones  <lawrence.jones@ugs.com>

        * vers_ts (Version_TS): Don't allow command line keyword expansion
        modes to override binary mode.
        * sanity.sh (): Tests for the above.
        (Merged from trunk.)

2005-06-06  Conrad T. Pino  <Conrad@Pino.com>

	* cvs.h: Reverse patch committed 2005-05-27 by Conrad T. Pino.
	* run.c: Reverse patch committed 2005-05-27 by Conrad T. Pino.

2005-06-02  Derek Price  <derek@ximbiot.com>

	* zlib.c (compress_buffer_shutdown_input): Don't attempt to read EOF
	from the client during shutdown.  It might never be sent.
	* sanity.sh (abspath2): Test for this.

2005-05-31  Derek Price  <derek@ximbiot.com>
	for Alexander Taler <alex@0--0.org>

	* rcscmds.c: Change type of call_diff_argc_allocated from int to
	size_t, to match the prototype of run_add_arg_p().  This fixes a
	bus error in OpenBSD 3.6 sparc64.

2005-05-27  Conrad T. Pino  <Conrad@Pino.com>

	* cvs.h: Replace "run_arg" function with "#define run_arg run_add_arg",
	add "run_add_arg" prototype, change "piped_child" prototype to be same
	as feature branch to reflect "(os2,src,windows-NT)/run.c" changes.
	* run.c: Remove "run_arg" to synchronize with "../windows-NT/run.c".
	Function "run_add_arg" scope was "static" and is now "extern" scope.
	Synchronize "piped_child" function arguments with feature branch.

2005-05-27  Derek Price  <derek@ximbiot.com>

	* client.c (send_arg): Make arg const.
	(send_option_string): Rename to...
	(send_options): ...this and accept argc/argv in place of string.
	* client.h: Update protos to match the changes to client.c.
	* cvs.h (RCS_exec_rcsdiff, diff_exec): Update protos.
	(run_add_arg_p, run_arg_free_p): New protos.
	* diff.c (opts, opts_allocated): Replace with...
	(diff_argv, diff_argc, diff_arg_allocated): ...these.
	(add_diff_args): New convenience function.
	(diff): Use new constructs and APIs.
	* patch.c (patch_fileproc, RCS_checkin, RCS_delete_revs), rcscmds.c